--- a/design.css
+++ b/design.css
@@ -5,6 +5,7 @@ body {
     box-sizing: border-box;
     text-decoration: none;
     background-image: url("background.jpg");
+    background-repeat: no-repeat;
     width: 100%;
     background-size: 100%;
     background-color: #000000;
